--- a/src/index.css
+++ b/src/index.css
@@ -155,12 +155,12 @@ select:focus {
   border: 1px solid var(--color-dark);
 }
 
-form .button {
+.form .button {
   margin-top: 0.6rem;
   grid-column: 2;
 }
 
-form h2 {
+.form h2 {
   grid-column: 1 / -1;
   font-size: 2.2rem;
   text-transform: uppercase;
